src/App.css
body {
  background-color: var(--background);
}

main {
  max-width: 60vw;
  margin: 0 auto;
}

/* Title */
h1 {
  text-align: center;
  margin: 1rem;
}

/* Text Colour */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  color: var(--text);
}

/* Game */
.game-wrapper {
  display: grid;
  grid-template-columns: 0.3fr 1.5fr 0.7fr;
  background-color: var(--surface);
  border: 2px solid var(--highlight);
  padding: 1rem;
  border-radius: 16px;
  height: 570px;
}

/* Player Information */
.player-information {
  display: grid;
  grid-template-rows: 1fr 1fr;
  margin: 0.5rem;
}

/* Player Cards */
.player-cards {
  display: grid;
  grid-template-rows: 1fr 1fr;
}
.playing-card {
  margin: 0.5rem;
  display: inline-block;
  animation: fadeIn 0.5s ease-in-out forwards;
}
.dealers-hand,
.players-hand {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr;
}
/* Card Overlap */
.card-0,
.card-1,
.card-2,
.card-3,
.card-4,
.card-5,
.card-6,
.card-7,
.card-8,
.card-9,
.card-10 {
  grid-column: 1;
  grid-row: 1;
}
.card-1 {
  margin-left: 60px;
  z-index: 1;
}
.card-2 {
  margin-left: 120px;
  z-index: 2;
}
.card-3 {
  margin-left: 180px;
  z-index: 3;
}
.card-4 {
  margin-left: 240px;
  z-index: 4;
}
.card-5 {
  margin-left: 300px;
  z-index: 5;
}
.card-6 {
  margin-left: 360px;
  z-index: 6;
}
.card-7 {
  margin-left: 420px;
  z-index: 7;
}
.card-8 {
  margin-left: 480px;
  z-index: 8;
}
.card-9 {
  margin-left: 540px;
  z-index: 9;
}
.card-10 {
  margin-left: 600px;
  z-index: 10;
}

/* Game Buttons */
.game-buttons {
  display: grid;
  grid-template-rows: 1fr 1fr;
  margin: 0.5rem;
}
.game-buttons button {
  padding: 0.5rem 1rem;
  margin: 0.5rem;
  margin-bottom: 2rem;
  font-weight: 600;
  font-size: 1.5rem;
  border-radius: 8px;
  background-color: var(--primary);
  height: 3rem;
  width: 100%;
  border: 1px solid var(--primary);
}
.game-buttons button:hover {
  cursor: pointer;
  opacity: 80%;
  transform: scale(0.98);
}

/* Betting Area */
.betting-area {
  background-color: var(--surface);
  border: 2px solid var(--highlight);
  padding: 1rem;
  border-radius: 16px;
  margin-top: 1rem;
  margin-bottom: 2rem;
  display: grid;
  grid-template-columns: 1fr 4fr;
}
.betting-area p {
  font-size: 1.2rem;
}
.chip {
  display: inline-block;
  padding: 0.5rem;
  background: none;
  border: none;
}
.chip:hover {
  opacity: 80%;
  cursor: pointer;
  transform: scale(0.98);
}

/* Statistics Table */
.table-container {
  overflow-x: auto;
  margin: 1rem 0;
  border-radius: 4px;
}
table {
  width: 100%;
  border-collapse: collapse;
  table-layout: fixed;
  font-size: 1rem;
  background-color: var(--secondary);
}
thead {
  background-color: #009879;
  color: var(--text);
  text-align: left;
}
th,
td {
  padding: 12px 15px;
}

/* Game Rules */
.game-rules {
  color: var(--dark-text);
  padding: 1rem;
  margin-bottom: 2rem;
  border: 2px solid var(--highlight);
  background-color: var(--secondary);
  border-radius: 4px;
}
.game-rules h2 {
  color: var(--dark-text);
}
.game-rules ol {
  margin-left: 1rem;
}

/* Result Message */
.result-message {
  font-weight: 500;
  width: 20rem;
  text-align: center;
  padding: 1.65rem 1rem;
  border-radius: 8px;
  font-size: 1.2rem;
  position: absolute;
  top: 0rem;
  left: calc(50% - 10rem);
  z-index: 999;
  animation: fadeIn 0.2s ease-in-out forwards;
}
.result-win {
  background-color: var(--success);
  color: var(--dark-text);
}
.result-lose {
  background-color: var(--accent);
  color: var(--text);
}
.result-push {
  background-color: var(--secondary);
  color: var(--dark-text);
}
@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

/* Mobile Responsiveness */
@media (max-width: 1200px) {
  main {
    max-width: 95vw;
  }

  /* Title */
  h1 {
    margin: 0.5rem;
    font-size: 1.5rem;
  }

  /* Game */
  .game-wrapper {
    display: grid;
    grid-template-areas:
      "player-information player-cards"
      "game-buttons game-buttons";
    grid-template-columns: 75px auto;
    grid-template-rows: 530px auto;
    padding: 0.1rem;
    height: 685px;
  }

  /* Player Information */
  .player-information {
    grid-area: player-information;
    font-size: 0.9rem;
  }
  .player-information div:last-child {
    margin-top: 0.8rem;
  }

  /* Player Cards */
  .player-cards {
    grid-area: player-cards;
  }
  .playing-card {
    margin: 0.5rem;
  }

  /* Card Overlap */
  .card-1 {
    margin-left: 35px;
    z-index: 1;
  }
  .card-2 {
    margin-left: 65px;
    z-index: 2;
  }
  .card-3 {
    margin-left: 95px;
    z-index: 3;
  }
  .card-4 {
    margin-left: 125px;
    z-index: 4;
  }
  .card-5 {
    margin-left: 155px;
    z-index: 5;
  }
  .card-6 {
    margin-left: 185px;
    z-index: 6;
  }
  .card-7 {
    margin-left: 215px;
    z-index: 7;
  }
  .card-8 {
    margin-left: 245px;
    z-index: 8;
  }
  .card-9 {
    margin-left: 275px;
    z-index: 9;
  }
  .card-10 {
    margin-left: 305px;
    z-index: 10;
  }

  /* Game Buttons */
  .game-buttons {
    grid-area: game-buttons;
    display: block;
    margin-top: 1rem;
  }
  .game-buttons button {
    width: 50%;
    margin: 0;
    margin-bottom: 1.5rem;
  }
  .new-game button {
    width: 100%;
  }

  /* Betting Area */
  .betting-area {
    padding: 0.5rem;
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: auto 1fr;
    gap: 1rem;
  }

  /* Statistics Table */
  .dealer-win-percentage {
    font-size: 0;
  }
  .dealer-win-percentage::after {
    content: "Dealer Win %";
    font-size: 1rem;
  }
  .player-win-percentage {
    font-size: 0;
  }
  .player-win-percentage::after {
    content: "Player Win %";
    font-size: 1rem;
  }

  /* Result Message */
  .result-message {
    padding: 0.8rem 1rem;
  }
}

